<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云健康</string>
    <string name="action_settings">Settings</string>
    <string name="no_connect">未连接</string>
    <string name="connecting">连接中</string>
    <string name="connected">已连接</string>
    <string name="upload">上传</string>
    <string name="health">健康</string>
    <string name="locate">定位</string>
    <string name="set">设置</string>
    <string name="measure_time">测量时间：</string>
    <string name="xueyang_measure_result">测量结果</string>
    <string name="xueyang_normal_range">正常范围</string>
    <string name="xueyang_normal_range_number">96%-100%</string>
    <string name="maibo_normal_range_number">60-100次每分钟</string>
    <string name="xuetang_init_measure_number">血氧：0</string>
    <string name="maibo_init_measure_number">脉搏：0</string>
    <string name="choose_time">选择日期</string>
    <string name="fenchen">粉尘浓度</string>
    <string name="dust_update_time">更新时间: </string>
    <string name="dust_init_time">0</string>
    <string name="initialNum">0</string>
    <string name="sheshidu">℃</string>
    <string name="time">日期</string>
    <string name="init_xuetang_num">血糖：0</string>
    <string name="see_chart">查看图表</string>

    <string name="str_health">健康</string>
    <string name="str_locate">定位</string>
    <string name="str_setting">设置</string>
    <string name="some_sentences">我们的团队来自西安邮电大学，经历奋斗，我们做成现在的作品，这中间我们收获了很多，从一无所知 到渐入佳境，但是还有很多不足，我们距离当初的设想还有些许差距，我们会继续努力，感谢您的使用。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="xueyang">血氧</string>

</resources>