<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#f0f"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/activity_img1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#999999"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab_health" />

        <ImageButton
            android:id="@+id/activity_img2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#999999"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab_locate" />

        <ImageButton
            android:id="@+id/activity_img3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#999999"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/health"
            android:background="#999999"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/locate"
            android:background="#999999"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set"
            android:background="#999999"
            android:textColor="#000"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>